welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: not found: value getCouleursol
	T(0) = getCouleursol();
               ^