welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
	var T = new Array[Color](getMondeHauteur());
	T(0) = getCouleursol();
	for(w<- 1 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
	}
}
